// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellSummary should render the SellSummary view 1`] = `
<Screen
  header={<SellSummaryHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <SellOfferSummary />
  </ForwardRef>
  <PrimaryButton
    disabled={false}
    loading={false}
    narrow={true}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    next
  </PrimaryButton>
</Screen>
`;

exports[`SellSummary should render the SellSummary view with the publish button disabled 1`] = `
<Screen
  header={<SellSummaryHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <SellOfferSummary />
  </ForwardRef>
  <PrimaryButton
    disabled={true}
    loading={false}
    narrow={true}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    next
  </PrimaryButton>
</Screen>
`;
